--- a/package.json
+++ b/package.json
@@ -11,14 +11,18 @@
   },
   "dependencies": {
     "@react-native-picker/picker": "^2.2.1",
+    "@react-navigation/material-bottom-tabs": "^6.0.9",
+    "@react-navigation/material-top-tabs": "^6.0.6",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/native-stack": "^6.2.5",
     "react": "17.0.2",
     "react-native": "0.66.4",
     "react-native-image-crop-picker": "^0.37.2",
+    "react-native-pager-view": "^5.4.9",
     "react-native-paper": "^4.11.1",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.10.1",
+    "react-native-tab-view": "^3.1.1",
     "react-native-vector-icons": "^9.0.0"
   },
   "devDependencies": {
