--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "17.0.2",
     "react-native": "0.66.4",
     "react-native-image-crop-picker": "^0.37.2",
+    "react-native-linear-gradient": "^2.5.6",
     "react-native-pager-view": "^5.4.9",
     "react-native-paper": "^4.11.1",
     "react-native-safe-area-context": "^3.3.2",
